--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 }
 canvas {
    image-rendering: pixelated;
-   height: 100%;
+   /* height: 100%;
    width: 100%;
-   position: relative;
+   position: relative; */
 }
