added a bunch small stuff, fixed hitboxes, added all unit

--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body {
 }
 canvas {
    image-rendering: pixelated;
+   /* image-rendering: crisp-edges; */
    /* height: 100%;
    width: 100%;
    position: relative; */
